# sphinxcontrib-extdevhelper-kasane

./: pyproject.toml
.github/workflows/: publish.yml  testing.yml
src/sphinxcontrib/kasane/: __init__.py
tests/: test_kasane.py
